start repository files

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="env/css/style.css">
-  <title>Education projects</title>
+  <title>Projects</title>
 </head>
 
 <body>
   <div class="wrapper">
-    <h1 class="title">Мои учебные проекты</h1>
-    <div class="subtitle">В обратной хронологии</div>
-    <ol class="listcontent">
-      <li class="listitem">[28/01/23] Relvise repeat 2</li>
+    <div class="text">
+      <h1>Учебные проекты</h1>
+      в хронологическом порядке
+    </div>
+    <ol class="list">
+      <li class="item">[28/01/23] <a href="">Relvise (landing page) repeat (1)</a></li>
+      <li class="item">[28/01/23] <a href="">Relvise (landing page)</a></li>
+      <li class="item">[28/01/23] <a href="">Relvise (landing page)</a></li>
     </ol>
   </div>
 
