--- a/relvise/repeat_1/index.html
+++ b/relvise/repeat_1/index.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+  <div class="wrapper">
+    <header class="header">
+      <div class="header__container container">
+        header
+      </div>
+    </header>
+    <main class="main">main</main>
+    <footer class="footer">footer</footer>
+  </div>
   <script src="js/script.js"></script>
 </body>
 
