--- a/relvise/repeat_1/index.html
+++ b/relvise/repeat_1/index.html
@@ -13,7 +13,28 @@
   <div class="wrapper">
     <header class="header">
       <div class="header__container container">
-        header
+        <div class="header__left">
+          <div class="header__logo"><a href="#">Relvise</a></div>
+          <ul class="header__menu headmenu">
+            <li class="headmenu__item"><a href="#">Home</a></li>
+            <li class="headmenu__item"><a href="#">Product</a></li>
+            <li class="headmenu__item"><a href="#">Pricing</a></li>
+            <li class="headmenu__item"><a href="#">Contact</a></li>
+
+            <li class="headmenu__item"><a href="#">Home</a></li>
+            <li class="headmenu__item"><a href="#">Product</a></li>
+            <li class="headmenu__item"><a href="#">Pricing</a></li>
+            <li class="headmenu__item"><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="header__right">
+          <div class="header__burger">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
       </div>
     </header>
     <main class="main">main</main>
