feat: create abuse menu, create shell(no JS) burger menu, button

--- a/relvise/repeat_1/index.html
+++ b/relvise/repeat_1/index.html
@@ -9,7 +9,8 @@
   <title>Document</title>
 </head>
 
-<body>
+<body class="activeburger">
+  <!-- activeburger -->
   <div class="wrapper">
     <header class="header">
       <div class="header__container container">
