feat: burger(js), header block complete

--- a/relvise/repeat_1/index.html
+++ b/relvise/repeat_1/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="scss/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 
-<body class="activeburger">
+<body>
   <!-- activeburger -->
   <div class="wrapper">
     <header class="header">
@@ -17,28 +18,26 @@
         <div class="header__left">
           <div class="header__logo"><a href="#">Relvise</a></div>
           <ul class="header__menu headmenu">
-            <li class="headmenu__item"><a href="#">Home</a></li>
-            <li class="headmenu__item"><a href="#">Product</a></li>
-            <li class="headmenu__item"><a href="#">Pricing</a></li>
-            <li class="headmenu__item"><a href="#">Contact</a></li>
+            <li class="headmenu__item"><a href="#" class="headmenu__link">Home</a></li>
+            <li class="headmenu__item"><a href="#" class="headmenu__link">Product</a></li>
+            <li class="headmenu__item"><a href="#" class="headmenu__link">Pricing</a></li>
+            <li class="headmenu__item"><a href="#" class="headmenu__link">Contact</a></li>
 
-            <li class="headmenu__item"><a href="#">Home</a></li>
-            <li class="headmenu__item"><a href="#">Product</a></li>
-            <li class="headmenu__item"><a href="#">Pricing</a></li>
-            <li class="headmenu__item"><a href="#">Contact</a></li>
           </ul>
         </div>
         <div class="header__right">
           <div class="header__burger">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="header__burgerstripe"></span>
+            <span class="header__burgerstripe"></span>
+            <span class="header__burgerstripe"></span>
+            <span class="header__burgerstripe"></span>
           </div>
         </div>
       </div>
     </header>
-    <main class="main">main</main>
+    <main class="main">
+      main
+    </main>
     <footer class="footer">footer</footer>
   </div>
   <script src="js/script.js"></script>
