feat: Create JS file, update html css, for start page repository

--- a/index.html
+++ b/index.html
@@ -11,17 +11,22 @@
 
 <body>
   <div class="wrapper">
-    <div class="text">
+    <div class="titlepage">
       <h1>Учебные проекты</h1>
       в хронологическом порядке
     </div>
     <ol class="list">
-      <li class="item">[28/01/23] <a href="">Relvise (landing page) repeat (1)</a></li>
-      <li class="item">[28/01/23] <a href="">Relvise (landing page)</a></li>
-      <li class="item">[28/01/23] <a href="">Relvise (landing page)</a></li>
+      <li class="item">[29/01/23]
+        <span class="itemtitle">
+          Relvise burger repeat(1)
+        </span>
+        <a href="https://a1exfox.github.io/eduProjects/relvise/repeat_1/" class="itemlink" target="_blank">
+          Тренировка делегирования событий на примере бургер меню.
+        </a>
+      </li>
     </ol>
   </div>
-
+  <script src="env/js/script.js"></script>
 </body>
 
 </html>
