--- a/relvise/repeat_2/index.html
+++ b/relvise/repeat_2/index.html
@@ -11,6 +11,27 @@
 </head>
 
 <body>
+  <div class="wrapper">
+    <header class="header">
+      <div class="header__container container">
+        <div class="header__logo">Relvise</div>
+        <ul class="header__menu headermenu">
+          <li class="headermenu__item"><a href="#">Home</a></li>
+          <li class="headermenu__item"><a href="#">Product</a></li>
+          <li class="headermenu__item"><a href="#">Pricing</a></li>
+          <li class="headermenu__item"><a href="#">Contact</a></li>
+        </ul>
+        <div class="header__burger">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </header>
+    <main class="main">main</main>
+    <footer class="footer">footer</footer>
+  </div>
   <script src="js/script.js"></script>
 </body>
 
