feat: +header[adapt]

--- a/relvise/repeat_2/index.html
+++ b/relvise/repeat_2/index.html
@@ -20,6 +20,11 @@
           <li class="headermenu__item"><a href="#">Product</a></li>
           <li class="headermenu__item"><a href="#">Pricing</a></li>
           <li class="headermenu__item"><a href="#">Contact</a></li>
+
+          <li class="headermenu__item"><a href="#">Home</a></li>
+          <li class="headermenu__item"><a href="#">Product</a></li>
+          <li class="headermenu__item"><a href="#">Pricing</a></li>
+          <li class="headermenu__item"><a href="#">Contact</a></li>
         </ul>
         <div class="header__burger">
           <span></span>
