--- a/relvise/repeat_2/index.html
+++ b/relvise/repeat_2/index.html
@@ -10,7 +10,7 @@
   <title>Relvise</title>
 </head>
 
-<body>
+<body class="activemenu">
   <div class="wrapper">
     <header class="header">
       <div class="header__container container">
@@ -20,11 +20,11 @@
           <li class="headermenu__item"><a href="#">Product</a></li>
           <li class="headermenu__item"><a href="#">Pricing</a></li>
           <li class="headermenu__item"><a href="#">Contact</a></li>
-
-          <li class="headermenu__item"><a href="#">Home</a></li>
+          <!-- abuse -->
+          <!-- <li class="headermenu__item"><a href="#">Home</a></li>
           <li class="headermenu__item"><a href="#">Product</a></li>
           <li class="headermenu__item"><a href="#">Pricing</a></li>
-          <li class="headermenu__item"><a href="#">Contact</a></li>
+          <li class="headermenu__item"><a href="#">Contact</a></li> -->
         </ul>
         <div class="header__burger">
           <span></span>
