--- a/relvise/repeat_2/index.html
+++ b/relvise/repeat_2/index.html
@@ -10,7 +10,7 @@
   <title>Relvise</title>
 </head>
 
-<body class="activemenu">
+<body>
   <div class="wrapper">
     <header class="header">
       <div class="header__container container">
