feat: +welcome[html only]

--- a/relvise/repeat_2/index.html
+++ b/relvise/repeat_2/index.html
@@ -34,7 +34,21 @@
         </div>
       </div>
     </header>
-    <main class="main">main</main>
+    <main class="main">
+      <section class="main__welcome welcome">
+        <div class="welcome__container container">
+          <h1 class="welcome__title">Finance and Consultancy Solution</h1>
+          <div class="welcome__text">We know how large objects will act, but things on a small scale.</div>
+          <div class="welcome__buttons">
+            <a href="#" class="welcome__link">Get Quote Now</a>
+            <a href="#" class="welcome__link">Learn More</a>
+          </div>
+        </div>
+        <div class="welcome__image">
+          <img src="img/welcome/consultance.jpg" alt="">
+        </div>
+      </section>
+    </main>
     <footer class="footer">footer</footer>
   </div>
   <script src="js/script.js"></script>
