feat: +welcomeBlock[html,css][no adapt]

--- a/relvise/repeat_2/index.html
+++ b/relvise/repeat_2/index.html
@@ -37,11 +37,11 @@
     <main class="main">
       <section class="main__welcome welcome">
         <div class="welcome__container container">
-          <h1 class="welcome__title">Finance and Consultancy Solution</h1>
-          <div class="welcome__text">We know how large objects will act, but things on a small scale.</div>
+          <h1 class="welcome__title">Finance and<br> Consultancy<br> Solution</h1>
+          <div class="welcome__text">We know how large objects will act,<br> but things on a small scale.</div>
           <div class="welcome__buttons">
             <a href="#" class="welcome__link">Get Quote Now</a>
-            <a href="#" class="welcome__link">Learn More</a>
+            <a href="#" class="welcome__link welcome__link_border">Learn More</a>
           </div>
         </div>
         <div class="welcome__image">
