feat: repeat_2 complete

--- a/index.html
+++ b/index.html
@@ -16,11 +16,24 @@
       в хронологическом порядке
     </div>
     <ol class="list">
+      <li class="item">[01/02/23]
+        <span class="itemtitle">
+          Relvise[header-welcome] Тренировка burger JS rep(2)
+        </span>
+        <a href="https://a1exfox.github.io/eduProjects/relvise/repeat_2/" class="itemlink" target="_blank">
+          [header: adapt, burger JS] <br>
+          [welcome: no adaptive] <br>
+          Столкнулся с некоторыми сложностями позиционирования когда шапка и 1-й блок абсолютные - вышел с использованием костыля.
+          Надо изучать тему.
+          Осваиваю использование normalize.css
+        </a>
+      </li>
       <li class="item">[29/01/23]
         <span class="itemtitle">
-          Relvise burger repeat(1)
+          Relvise[header] тренировка burger JS rep(1)
         </span>
         <a href="https://a1exfox.github.io/eduProjects/relvise/repeat_1/" class="itemlink" target="_blank">
+          [header: adapt, burger JS] <br>
           Тренировка делегирования событий на примере бургер меню.
         </a>
       </li>
